# soccer-software

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml
deploy/ansible/: README.md  deploy.yml  inventory.example.ini  provision.yml
deploy/compose/: cyclonedds_profile.xml  fastdds_profile.xml  robot.compose.yaml  sim.compose.yaml  zed_params_override.yaml
deploy/docker/: Dockerfile.dev  Dockerfile.jetson  Dockerfile.runtime  entrypoint.sh
deploy/toolchains/: arm-none-eabi.cmake
docs/: IMPLEMENTATION.md  bring_up_investigation_report.md  jetson_zed_workflow.md  ros2-diagram.md  zed_jetson_integration.md
docs/architecture/: jetson_master_protocol.md  localization_strategy_report.md  new_architecture_blueprint.md  soccer_hardware_rewrite.md
firmware/motor_controller/: CMakeLists.txt  README.md
firmware/motor_controller/include/: pd_controller.h  protocol.h  watchdog.h
firmware/motor_controller/src/: main.c  pd_controller.c  watchdog.c
firmware/motor_controller/test/: test_pd_controller.c
hardware/: README.md
ros2_ws/src/game_controller_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/game_controller_bridge/game_controller_bridge/: __init__.py  gc_bridge_node.py  gc_protocol.py
ros2_ws/src/game_controller_bridge/test/: test_gc_protocol.py
ros2_ws/src/soccer_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/soccer_bringup/config/: minibot_params.yaml  soccerbot_params.yaml
ros2_ws/src/soccer_bringup/launch/: camera.launch.py  robot.launch.py  team.launch.py
ros2_ws/src/soccer_bringup/scripts/: camera_bridge_node  sim_camera_node
ros2_ws/src/soccer_bringup/soccer_bringup/: __init__.py  camera_bridge.py  sim_camera.py
ros2_ws/src/soccer_control/: CMakeLists.txt  package.xml  soccer_control_plugins.xml
ros2_ws/src/soccer_control/include/soccer_control/: policy_runner.hpp  residual_rl_controller.hpp
ros2_ws/src/soccer_control/src/: mpc_node.cpp  residual_rl_controller.cpp
ros2_ws/src/soccer_description/: CMakeLists.txt  package.xml
ros2_ws/src/soccer_description/config/: controllers.yaml
ros2_ws/src/soccer_description/rviz/: soccerbot.rviz
ros2_ws/src/soccer_description/urdf/: minibot.ros2_control.xacro  minibot.urdf.xacro  soccerbot.ros2_control.xacro  soccerbot.urdf.xacro
ros2_ws/src/soccer_hardware/: CMakeLists.txt  package.xml  soccer_hardware.xml
ros2_ws/src/soccer_hardware/include/soccer_hardware/: minibot_serial_hardware.hpp  minibot_sim_hardware.hpp  soccerbot_serial_hardware.hpp  soccerbot_sim_hardware.hpp  wire_protocol.hpp
ros2_ws/src/soccer_hardware/src/: minibot_serial_hardware.cpp  minibot_sim_hardware.cpp  soccerbot_serial_hardware.cpp  soccerbot_sim_hardware.cpp
ros2_ws/src/soccer_localization/: package.xml  setup.cfg  setup.py
ros2_ws/src/soccer_localization/soccer_localization/: __init__.py  ekf_node.py  field_model.py  mcl_node.py
ros2_ws/src/soccer_localization/test/: test_mcl.py
ros2_ws/src/soccer_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/soccer_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  ControlGoal.msg  FieldFeature.msg  FieldFeatureArray.msg  GameState.msg  RoleBid.msg  TeamData.msg
ros2_ws/src/soccer_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/soccer_perception/soccer_perception/: __init__.py  camera_model.py  detector_node.py  fieldline_node.py  projection_node.py
ros2_ws/src/soccer_perception/test/: test_projection.py
ros2_ws/src/soccer_strategy/: CMakeLists.txt  package.xml
ros2_ws/src/soccer_strategy/include/soccer_strategy/: bt_nodes.hpp  role_auction.hpp
ros2_ws/src/soccer_strategy/src/: bt_nodes.cpp  role_auction.cpp  strategy_node.cpp
ros2_ws/src/soccer_strategy/test/: test_role_auction.cpp
ros2_ws/src/soccer_strategy/trees/: goalie.xml  striker.xml  supporter.xml
ros2_ws/src/soccer_teamcomm/: package.xml  setup.cfg  setup.py
ros2_ws/src/soccer_teamcomm/soccer_teamcomm/: __init__.py  teamcomm_node.py
sim/: README.md  __init__.py  requirements.txt  train_residual.py
sim/assets/: README.md
sim/export/: __init__.py  export_onnx.py
sim/tasks/: __init__.py  domain_randomization.py  minibot_reach_env.py  soccerbot_reach_env.py
src/soccerbot/game_controller_bridge/: package.xml  setup.py
src/soccerbot/soccerbot_bringup/: CMakeLists.txt  package.xml
src/soccerbot/soccerbot_control/: CMakeLists.txt  package.xml
src/soccerbot/soccerbot_description/: CMakeLists.txt  package.xml
src/soccerbot/soccerbot_hardware/: CMakeLists.txt  package.xml
src/soccerbot/soccerbot_perception/: package.xml  setup.cfg  setup.py
src/soccerbot/soccerbot_strategy/: CMakeLists.txt  package.xml
tools/: README.md  calibrate_camera.py  dev_shell.sh  mock_gamecontroller.py
