<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>game_controller_bridge</name>
  <version>0.1.0</version>
  <description>
    L5 mission layer (blueprint §7). Parses the RoboCup Humanoid GameController
    UDP broadcast on port 3838 (HlRoboCupGameControlData @ 2 Hz), publishes a
    clean /gc/game_state topic, and emits the mandatory status return on port
    3939. It is the ultimate authority: HALT/PENALIZED overrides all AI.
  </description>

  <maintainer email="team@robocup.example">RoboCup Humanoid Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>soccer_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
