<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soccer_control</name>
  <version>0.1.0</version>
  <description>
    L1 whole-body control for soccerbot (blueprint §4): a model-based MPC reference
    generator (mpc_node) plus a ros2_control "ResidualRLController" plugin that
    adds a *bounded* RL residual on top of the MPC reference. MPC = physically
    grounded trajectory; RL = disturbance absorber; the 1 kHz PD lives on the MCU.
  </description>

  <maintainer email="team@robocup.example">RoboCup Humanoid Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>soccer_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/soccer_control_plugins.xml"/>
  </export>
</package>
