<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soccer_hardware</name>
  <version>0.1.0</version>
  <description>
    ros2_control SystemInterface plugins for soccerbot — the single sim/real
    abstraction boundary (blueprint §9-10). SoccerbotSimHardware integrates each
    joint with the MIT impedance law in software (stands in for Isaac/Mujoco);
    SoccerbotSerialHardware streams a full MIT command (q*, qd*, kp, kd, tau_ff)
    per joint to the Master STM32 over USB-CDC and reads back state + IMU. The
    Robostride actuators close the torque loop onboard.
  </description>

  <maintainer email="team@robocup.example">RoboCup Humanoid Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Tells pluginlib where to find the exported hardware plugins. -->
    <hardware_interface plugin="${prefix}/soccer_hardware.xml"/>
  </export>
</package>
