<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soccer_perception</name>
  <version>0.1.0</version>
  <description>
    L3 perception for MiniBot (blueprint §5, localization report §3.2). Two
    decoupled vision problems: (1) a swappable object DETECTOR node
    (RF-DETR/YOLO → TensorRT) for ball/goalpost/robot, and (2) a field-line
    SEGMENTATION node feeding the MCL point cloud. A projection node turns image
    detections into 3D base-frame coordinates using ZED depth (flat-ground
    homography fallback).
  </description>

  <maintainer email="team@robocup.example">RoboCup Humanoid Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>soccer_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
